[gd_scene load_steps=12 format=3 uid="uid://boanf10hq66lt"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_pxkyl"]
[ext_resource type="FontFile" uid="uid://cmibcc20prfro" path="res://font/PressStart2P-Regular.ttf" id="1_tm3el"]
[ext_resource type="Texture2D" uid="uid://bh4ox8x7isckb" path="res://Sprites/cloud.png" id="2_5de8c"]
[ext_resource type="Texture2D" uid="uid://gxh38j4wy27w" path="res://Sprites/mountains.png" id="2_co8vs"]
[ext_resource type="Texture2D" uid="uid://ebuleavcb56g" path="res://Sprites/grass.png" id="3_pr7a4"]
[ext_resource type="Texture2D" uid="uid://5ek11mdx56oy" path="res://Sprites/player.png" id="4_emdpv"]
[ext_resource type="Texture2D" uid="uid://cctydjr4obq2n" path="res://Sprites/bushes.png" id="6_n4skg"]
[ext_resource type="AudioStream" uid="uid://bpi6xcfifjio" path="res://Sounds/blip.wav" id="8_qvpjt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s6vkb"]
texture = ExtResource("3_pr7a4")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
5:1/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
7:1/0 = 0
6:1/0 = 0
7:2/0 = 0
8:0/0 = 0
8:2/0 = 0
8:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rufrp"]
texture = ExtResource("6_n4skg")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_deuye"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_s6vkb")
sources/1 = SubResource("TileSetAtlasSource_rufrp")

[node name="Menu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pxkyl")

[node name="Mountains" type="Sprite2D" parent="."]
position = Vector2(128, 120)
texture = ExtResource("2_co8vs")

[node name="Cloud" type="Sprite2D" parent="."]
position = Vector2(50, 45)
texture = ExtResource("2_5de8c")

[node name="Cloud2" type="Sprite2D" parent="."]
position = Vector2(235, 16)
texture = ExtResource("2_5de8c")

[node name="Cloud3" type="Sprite2D" parent="."]
position = Vector2(194, 66)
texture = ExtResource("2_5de8c")

[node name="Cloud4" type="Sprite2D" parent="."]
position = Vector2(117, 0)
texture = ExtResource("2_5de8c")

[node name="Cloud5" type="Sprite2D" parent="."]
position = Vector2(-6, 14)
texture = ExtResource("2_5de8c")

[node name="StoryModeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 107.0
offset_right = 306.0
offset_bottom = 123.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("1_tm3el")
text = "Story Mode"

[node name="EndlessModeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 132.0
offset_right = 338.0
offset_bottom = 148.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("1_tm3el")
text = "Endless Mode"

[node name="Arrow" type="Label" parent="."]
layout_mode = 0
offset_left = 132.0
offset_top = 107.0
offset_right = 148.0
offset_bottom = 123.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("1_tm3el")
text = ">"

[node name="Helper" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 3.0
offset_top = 229.0
offset_right = 275.0
offset_bottom = 245.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("1_tm3el")
text = "Press H to Select"

[node name="HighScoreLabel" type="Label" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_left = 3.0
offset_top = 212.0
offset_right = 275.0
offset_bottom = 228.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("1_tm3el")
text = "Highscore: 0"

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_deuye")
format = 2
layer_0/tile_data = PackedInt32Array(1507328, 65536, 1, 1572864, 65536, 1, 1638400, 65536, 1, 1703936, 65536, 1, 1769472, 65536, 1, 1835008, 65536, 1, 1900544, 65536, 1, 1507329, 65536, 1, 1572865, 65536, 1, 1638401, 65536, 1, 1703937, 65536, 1, 1769473, 65536, 1, 1835009, 65536, 1, 1900545, 65536, 1, 1507330, 65536, 1, 1572866, 65536, 1, 1638402, 65536, 1, 1703938, 65536, 1, 1769474, 65536, 1, 1835010, 65536, 1, 1900546, 65536, 1, 1507331, 196608, 1, 1572867, 65536, 1, 1638403, 65536, 1, 1703939, 65536, 1, 1769475, 65536, 1, 1835011, 65536, 1, 1900547, 65536, 1, 1507332, 65536, 0, 1572868, 65536, 1, 1638404, 65536, 1, 1703940, 65536, 1, 1769476, 65536, 1, 1835012, 65536, 1, 1900548, 65536, 1, 1507333, 65536, 0, 1572869, 65536, 1, 1638405, 65536, 1, 1703941, 65536, 1, 1769477, 65536, 1, 1835013, 65536, 1, 1900549, 65536, 1, 1507334, 65536, 0, 1572870, 65536, 1, 1638406, 65536, 1, 1703942, 65536, 1, 1769478, 65536, 1, 1835014, 65536, 1, 1900550, 65536, 1, 1507335, 65536, 0, 1572871, 65536, 1, 1638407, 65536, 1, 1703943, 65536, 1, 1769479, 65536, 1, 1835015, 65536, 1, 1900551, 65536, 1, 1507336, 65536, 0, 1572872, 65536, 1, 1638408, 65536, 1, 1703944, 65536, 1, 1769480, 65536, 1, 1835016, 65536, 1, 1900552, 65536, 1, 1507337, 65536, 0, 1572873, 65536, 1, 1638409, 65536, 1, 1703945, 65536, 1, 1769481, 65536, 1, 1835017, 65536, 1, 1900553, 65536, 1, 1507338, 65536, 0, 1572874, 65536, 1, 1638410, 65536, 1, 1703946, 65536, 1, 1769482, 65536, 1, 1835018, 65536, 1, 1900554, 65536, 1, 1507339, 65536, 0, 1572875, 65536, 1, 1638411, 65536, 1, 1703947, 65536, 1, 1769483, 65536, 1, 1835019, 65536, 1, 1900555, 65536, 1, 1507340, 65536, 0, 1572876, 65536, 1, 1638412, 65536, 1, 1703948, 65536, 1, 1769484, 65536, 1, 1835020, 65536, 1, 1900556, 65536, 1, 1507341, 65536, 0, 1572877, 65536, 1, 1638413, 65536, 1, 1703949, 65536, 1, 1769485, 65536, 1, 1835021, 65536, 1, 1900557, 65536, 1, 1507342, 65536, 0, 1572878, 65536, 1, 1638414, 65536, 1, 1703950, 65536, 1, 1769486, 65536, 1, 1835022, 65536, 1, 1900558, 65536, 1, 1507343, 65536, 0, 1572879, 65536, 1, 1638415, 65536, 1, 1703951, 65536, 1, 1769487, 65536, 1, 1835023, 65536, 1, 1900559, 65536, 1, 1507344, 65536, 0, 1572880, 65536, 1, 1638416, 65536, 1, 1703952, 65536, 1, 1769488, 65536, 1, 1835024, 65536, 1, 1900560, 65536, 1, 1507345, 65536, 0, 1572881, 65536, 1, 1638417, 65536, 1, 1703953, 65536, 1, 1769489, 65536, 1, 1835025, 65536, 1, 1900561, 65536, 1, 1507346, 65536, 0, 1572882, 65536, 1, 1638418, 65536, 1, 1703954, 65536, 1, 1769490, 65536, 1, 1835026, 65536, 1, 1900562, 65536, 1, 1507347, 65536, 0, 1572883, 65536, 1, 1638419, 65536, 1, 1703955, 65536, 1, 1769491, 65536, 1, 1835027, 65536, 1, 1900563, 65536, 1, 1507348, 65536, 0, 1572884, 65536, 1, 1638420, 65536, 1, 1703956, 65536, 1, 1769492, 65536, 1, 1835028, 65536, 1, 1900564, 65536, 1, 1507349, 65536, 0, 1572885, 65536, 1, 1638421, 65536, 1, 1703957, 65536, 1, 1769493, 65536, 1, 1835029, 65536, 1, 1900565, 65536, 1, 1507350, 65536, 0, 1572886, 65536, 1, 1638422, 65536, 1, 1703958, 65536, 1, 1769494, 65536, 1, 1835030, 65536, 1, 1900566, 65536, 1, 1507351, 65536, 0, 1572887, 65536, 1, 1638423, 65536, 1, 1703959, 65536, 1, 1769495, 65536, 1, 1835031, 65536, 1, 1900567, 65536, 1, 1507352, 65536, 0, 1572888, 65536, 1, 1638424, 65536, 1, 1703960, 65536, 1, 1769496, 65536, 1, 1835032, 65536, 1, 1900568, 65536, 1, 1507353, 65536, 0, 1572889, 65536, 1, 1638425, 65536, 1, 1703961, 65536, 1, 1769497, 65536, 1, 1835033, 65536, 1, 1900569, 65536, 1, 1507354, 65536, 0, 1572890, 65536, 1, 1638426, 65536, 1, 1703962, 65536, 1, 1769498, 65536, 1, 1835034, 65536, 1, 1900570, 65536, 1, 1507355, 65536, 0, 1572891, 65536, 1, 1638427, 65536, 1, 1703963, 65536, 1, 1769499, 65536, 1, 1835035, 65536, 1, 1900571, 65536, 1, 1507356, 65536, 0, 1572892, 65536, 1, 1638428, 65536, 1, 1703964, 65536, 1, 1769500, 65536, 1, 1835036, 65536, 1, 1900572, 65536, 1, 1507357, 65536, 0, 1572893, 65536, 1, 1638429, 65536, 1, 1703965, 65536, 1, 1769501, 65536, 1, 1835037, 65536, 1, 1900573, 65536, 1, 1507358, 65536, 0, 1572894, 65536, 1, 1638430, 65536, 1, 1703966, 65536, 1, 1769502, 65536, 1, 1835038, 65536, 1, 1900574, 65536, 1, 1507359, 65536, 0, 1572895, 65536, 1, 1638431, 65536, 1, 1703967, 65536, 1, 1769503, 65536, 1, 1835039, 65536, 1, 1900575, 65536, 1, 1441795, 131072, 1, 1376259, 131072, 1, 1310723, 131072, 1, 1245187, 131072, 1, 1179651, 131072, 1, 1114115, 131072, 1, 1048579, 131072, 1, 983043, 131072, 1, 917507, 131072, 1, 851971, 131072, 1, 786435, 131072, 1, 720899, 131072, 1, 655363, 131072, 1, 589827, 131072, 1, 524291, 131072, 1, 458755, 131072, 1, 393219, 131072, 1, 327683, 131072, 1, 262147, 131072, 1, 196611, 131072, 1, 196610, 65536, 1, 196609, 65536, 1, 196608, 65536, 1, 262144, 65536, 1, 262145, 65536, 1, 262146, 65536, 1, 327682, 65536, 1, 393218, 65536, 1, 393217, 65536, 1, 393216, 65536, 1, 327680, 65536, 1, 327681, 65536, 1, 458752, 65536, 1, 524288, 65536, 1, 589824, 65536, 1, 655360, 65536, 1, 720896, 65536, 1, 786432, 65536, 1, 851968, 65536, 1, 917504, 65536, 1, 983040, 65536, 1, 1048576, 65536, 1, 1114112, 65536, 1, 1179648, 65536, 1, 1245184, 65536, 1, 1310720, 65536, 1, 1376256, 65536, 1, 1441792, 65536, 1, 458753, 65536, 1, 524289, 65536, 1, 589825, 65536, 1, 655361, 65536, 1, 720897, 65536, 1, 786433, 65536, 1, 851969, 65536, 1, 917505, 65536, 1, 983041, 65536, 1, 1048577, 65536, 1, 1114113, 65536, 1, 1179649, 65536, 1, 1245185, 65536, 1, 1310721, 65536, 1, 1376257, 65536, 1, 1441793, 65536, 1, 458754, 65536, 1, 524290, 65536, 1, 589826, 65536, 1, 655362, 65536, 1, 720898, 65536, 1, 786434, 65536, 1, 851970, 65536, 1, 917506, 65536, 1, 983042, 65536, 1, 1048578, 65536, 1, 1114114, 65536, 1, 1179650, 65536, 1, 1245186, 65536, 1, 1310722, 65536, 1, 1376258, 65536, 1, 1441794, 65536, 1, 131072, 65536, 0, 131073, 65536, 0, 131074, 65536, 0, 131075, 131072, 0, 1376287, 1, 0, 1441823, 1, 1, 1376288, 65537, 0, 1441824, 65537, 1, 1376278, 1, 0, 1441814, 1, 1, 1376279, 65537, 0, 1441815, 65537, 1, 65537, 1, 1, 65538, 65537, 1, 2, 65537, 0, 1, 1, 0, 1376261, 1, 0, 1441797, 1, 1, 1441798, 65537, 1, 1376262, 65537, 0, 262153, 0, 0, 327689, 0, 1, 393225, 0, 1, 458761, 0, 1, 524297, 0, 1, 589833, 0, 2, 262154, 65536, 0, 327690, 65536, 1, 393226, 65536, 1, 458762, 65536, 1, 524298, 65536, 1, 589834, 65536, 2, 262155, 65536, 0, 327691, 65536, 1, 393227, 65536, 1, 458763, 65536, 1, 524299, 65536, 1, 589835, 65536, 2, 262156, 65536, 0, 327692, 65536, 1, 393228, 65536, 1, 458764, 65536, 1, 524300, 65536, 1, 589836, 65536, 2, 262157, 65536, 0, 327693, 65536, 1, 393229, 65536, 1, 458765, 65536, 1, 524301, 65536, 1, 589837, 65536, 2, 262158, 65536, 0, 327694, 65536, 1, 393230, 65536, 1, 458766, 65536, 1, 524302, 65536, 1, 589838, 65536, 2, 262159, 65536, 0, 327695, 65536, 1, 393231, 65536, 1, 458767, 65536, 1, 524303, 65536, 1, 589839, 65536, 2, 262160, 65536, 0, 327696, 65536, 1, 393232, 65536, 1, 458768, 65536, 1, 524304, 65536, 1, 589840, 65536, 2, 262161, 65536, 0, 327697, 65536, 1, 393233, 65536, 1, 458769, 65536, 1, 524305, 65536, 1, 589841, 65536, 2, 262162, 65536, 0, 327698, 65536, 1, 393234, 65536, 1, 458770, 65536, 1, 524306, 65536, 1, 589842, 65536, 2, 262163, 65536, 0, 327699, 65536, 1, 393235, 65536, 1, 458771, 65536, 1, 524307, 65536, 1, 589843, 65536, 2, 262164, 65536, 0, 327700, 65536, 1, 393236, 65536, 1, 458772, 65536, 1, 524308, 65536, 1, 589844, 65536, 2, 262165, 65536, 0, 327701, 65536, 1, 393237, 65536, 1, 458773, 65536, 1, 524309, 65536, 1, 589845, 65536, 2, 262166, 131072, 0, 327702, 131072, 1, 393238, 131072, 1, 458774, 131072, 1, 524310, 131072, 1, 589846, 131072, 2)

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 32.0
offset_right = 296.0
offset_bottom = 128.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("1_tm3el")
text = "The Plain
Escape"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(108, 176)
texture = ExtResource("4_emdpv")
hframes = 6

[node name="Transition" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 256.0
offset_bottom = 240.0
color = Color(0, 0, 0, 1)

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="BlipSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_qvpjt")
volume_db = 15.0

[connection signal="timeout" from="TransitionTimer" to="." method="_on_transition_timer_timeout"]
